--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 
                 <a class="right carousel-control" href="#myCarousel" data-slide="next">
                     <!--provide class "glyphicon glyphicon-chevron-right" for the span tag below-->
-                    <span class="glyphicon-chevron-right"></span>
+                    <span class="glyphicon glyphicon-chevron-right"></span>
                 </a>
 
             </center>
